# OjoSaurio

./: .gitignore  DesinstalarAutoarranqueMac.command  DesinstalarAutoarranqueWindows.bat  InstalarAutoarranqueMac.command  InstalarAutoarranqueWindows.bat  OjoSaurio.bat  OjoSaurio.vbs  OjoSaurioToy.bat  OjoSaurioToy.command  OjoSaurioToy.vbs  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: release.md  usage.md
docs/plans/: 2026-04-14-001-feat-regla-20-20-20-pitidos-plan.md
scripts/: install_autostart_mac.sh  install_autostart_windows.ps1  run_local.sh  uninstall_autostart_mac.sh  uninstall_autostart_windows.ps1
src/twenty20_beeper/: __init__.py  app.py  audio.py  config.py  models.py  timer_engine.py  ui.py
tests/: test_audio.py  test_config.py  test_timer_engine.py  test_ui_state.py
